{{$NEXT}}

- Change Specio constraint object's stringification overloading to return the
  type name rather than the default Perl object stringification, which gives
  you something like
  "Specio::Constraint::Parameterized=HASH(0x564d258efb48)". Anonymous are
  special cased to return something you can print.


0.46     2020-03-14

- No code changes, just fixing a mistake in the POD. Reported by Petr
  Pisar. Fixes #17.


0.45     2019-11-24

- Made XString a prereq if installing with Perl 5.10+.


0.44     2019-08-14

- Replaced the use of B with XString if it is installed. The latter is much
  smaller and provides the one subroutine from B we cared about. Based on GH
  #15. Implemented by Nicolas R.


0.43     2018-10-26

- Optimized compile-time operations to make Specio itself quicker to
  load. Specio's load time is a non-trivial part of the load time of DateTime
  (and presumably other things that use it). Based on
  https://github.com/houseabsolute/DateTime.pm/issues/85. Reported by
  versable.


0.42     2017-11-04

- The Perl library claimed it provided types named LaxVersionStr and
  StrictVersionStr but they were really named LaxVersion and
  StrictVersion. The names have now been fixed to match the documentation, so
  they are LaxVersionStr and StrictVersionStr.


0.41     2017-11-04

- Fixed checks for whether a class is loaded in light of upcoming optimization
  in Perl 5.28. Fixed by Sprout (GH #12).


0.40     2017-08-03

- Fixed more bugs with {any,object}_{can,does,isa}_type. When passed a glob
  (not a globref) they would die in their type check. On Perl 5.16 or earlier,
  passing a number to an any_* type would also die.

- Fixed subification overloading. If Sub::Quote was loaded, this would be
  used, but any environment variables needed for the closure would not be
  included. This broke enums, among other things.


0.39     2017-08-02

- Many bug fixes and improves to the types created by