@@ -6,6 +6,10 @@
   "Specio::Constraint::Parameterized=HASH(0x564d258efb48)". Anonymous are
   special cased to return something you can print.
 
+- All types now overload the `eq` comparison operator. Moose expects types to
+  be comparable in this manner when doing role summation. This fixes a bug
+  reported by Martin Gruner. GH #18.
+
 
 0.46     2020-03-14
 
